# prospector-profile-duplicated

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: main.yaml
ci/: config.yaml  requirements.txt
prospector_profile_duplicated/: autoflake.yaml  black.yaml  docformatter.yaml  isort.yaml  prospector.yaml  pydocstyle.yaml  pylint.yaml  pyupgrade.yaml  ruff.yaml
scripts/: complete-prospecter-blender
