[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
prospector = ">=1.15.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
dynamic = ["dependencies", "version"]
name = "prospector-profile-duplicated"
description = "Profile that can be used to disable the duplicated or conflict rules between Prospector and other tools"
readme = "README.md"
license = "BSD-2-Clause"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@gmail.com"}]
packages = [
  { include = "prospector_profile_duplicated" },
  { include = "prospector_profile_duplicated/prospector.yaml" },
  { include = "prospector_profile_duplicated/black.yaml" },
  { include = "prospector_profile_duplicated/isort.yaml" },
  { include = "prospector_profile_duplicated/pyupgrade.yaml" },
  { include = "prospector_profile_duplicated/docformatter.yaml" },
  { include = "prospector_profile_duplicated/pydocstyle.yaml" },
]

[project.urls]
repository = "https://github.com/sbrunner/prospector-profile-duplicated"
"Bug Tracker" = "None/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version"]
build-backend = "poetry.core.masonry.api"
